--- a/fl_web_app/requirements.txt
+++ b/fl_web_app/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 backports.zoneinfo==0.2.1
+crispy-bootstrap5==2024.2
 Django==4.2.16
+django-crispy-forms==2.3
 django-environ==0.11.2
 pillow==10.4.0
 psycopg2-binary==2.9.9
