--- a/.gitignore
+++ b/.gitignore
@@ -171,4 +171,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Docker e build
+*.docker
+build/
+dist/
+*.log
+
 # End of https://www.toptal.com/developers/gitignore/api/django
