--- a/fl_web_app/requirements.txt
+++ b/fl_web_app/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.8.1
-backports.zoneinfo==0.2.1
+async-timeout==4.0.3
+channels==4.1.0
+channels-redis==4.2.0
 crispy-bootstrap5==2024.2
 Django==4.2.16
 django-crispy-forms==2.3
 django-environ==0.11.2
+gunicorn==23.0.0
+msgpack==1.1.0
+packaging==24.1
 pillow==10.4.0
 psycopg2-binary==2.9.9
 python-barcode==0.15.1
