--- a/fl_web_app/nginx.conf
+++ b/fl_web_app/nginx.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;  # Nginx ascolta sulla porta 80
-    server_name 192.168.1.43;  # Indirizzo IP o nome di dominio
+    server_name 192.168.1.43;  # Indirizzo IP del server
 
     location / {
-        proxy_pass http://web:8080;  # Nome del tuo servizio Django nel file docker-compose
+        proxy_pass http://web:8080;  # Nome del servizio 'web'
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
