Added migrations in Dockerfile

--- a/fl_web_app/Dockerfile
+++ b/fl_web_app/Dockerfile
@@ -10,16 +10,16 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copia il file .env nel container
 COPY .env /app/
-COPY entrypoint.sh /app/
+
 
 # Copia il progetto Django all'interno del container
 COPY . /app/
+# Esegui le migrazioni
+RUN python manage.py makemigrations && python manage.py migrate
 
 # Espone la porta 8080 per il server web
 EXPOSE 8080
-# Imposta i permessi e l'entrypoint
-RUN chmod +x /app/entrypoint.sh
-ENTRYPOINT ["/app/entrypoint.sh"]
+
 
 # Comando per avviare Gunicorn
 CMD ["gunicorn", "--bind", "0.0.0.0:8080", "fl_web_app.wsgi:application"]
