Added pezzi field

--- a/fl_web_app/.env.example
+++ b/fl_web_app/.env.example
@@ -1,6 +1,8 @@
 DJANGO_ENV=development or production
 SECRET_KEY=''
 HOST_IP=
+ALLOWED_HOSTS_PRODUCTION=
+ALLOWED_HOSTS_DEVELOPMENT=
 ENGINE=
 DATABASE_NAME=
 DATABASE_USER=
